<?xml version="1.0"?>
<package format="3">
  <name>feather_tracker</name>
  <version>0.1.0</version>
  <description>
    Follow peacock feather with Intel Realsense camera and the AR4.
  </description>
  <license>MIT</license>

  <author>brent christensen</author>
  <maintainer email="brent.a.christensen@gmail.com">Brent Christensen</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
 
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ar_hardware_interface</exec_depend>
  <exec_depend>yolo_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>
  <exec_depend>ros2_aruco</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>