[metadata]
name = impact_rqt_limit_switches
version = 0.0.0
maintainer = sam
maintainer_email = my.address@gmail.com
description = TODO: Package description
license = Apache-2.0

[options]
packages = find:
install_requires =
    setuptools
zip_safe = True
tests_require =
    pytest

[options.data_files]
share/ament_index/resource_index/packages =
    resource/impact_rqt_limit_switches
share/impact_rqt_limit_switches =
    package.xml
    plugin.xml

[options.entry_points]
console_scripts =
